# xenminer

./: .autoenv.zsh  .gitignore  .pylintrc  CMakeLists-static.txt  CMakeLists.txt  README.md  bench.go  build.sh  config.conf  getblocks2.py  gpage.py  index_builder.py  leaderboard_api.py  make_cache.py  make_superblocks.py  manage_difficulty2.py  matrix.py  merkleroot.py  miner.py  miner.sh  miner_test.py  node_verify.py  ptrie_unittest.py  requirements-dev.txt  requirements.txt  rpc2.py  rpc_server.py  syncnode.py  test_miner.py
benchmark/: benchmark_20231002_122250_1660ti.csv  benchmark_20231002_170212_teslak80.csv  benchmark_20231002_171413_a2000.csv  benchmark_20231002_171927_a16.csv  benchmark_20231002_174801_a800.c1sv  benchmark_20231002_175358_h800.c1sv  benchmark_20231002_180438_3060ti.csv  benchmark_20231002_180936_3070ti.csv  benchmark_20231002_181723_3080.csv  benchmark_20231002_182058_titanx.csv  benchmark_20231002_182412_rtx5000.csv  benchmark_20231002_233711_rtx1650.csv  benchmark_20231002_234523_rtx3080ti.csv  benchmark_20231002_234830_rtx4090.csv  benchmark_20231002_235303_rtx3090.csv  benchmark_20231002_235629_v100SXM2.csv  benchmark_20231003_000101_rtx2080ti.csv  benchmark_20231003_000545_a4000.csv  benchmark_20231003_000919_a5000.csv  benchmark_20231003_001406_rtx3060.csv  benchmark_20231003_002716_a100SXM4.csv  benchmark_20231003_003030_a40.csv  benchmark_20231003_003544_titanxp.csv  benchmark_20231003_004204_A100PCIE.csv  benchmark_20231003_004243_teslat4.csv  benchmark_stat.py  benchmark_stat_divideprice.py  prices.txt
db/: account_balances.py  blockchain.py
dev/: bench_mempool.go  bench_mempool_multi.go  ptrie_db_rlp.py  ptrie_db_tests.py  ptrie_db_zlib.py
docs/: x1node.json
ethapi/: __main__.py  api.py  base.py  config.py  encoder.py  eth.py  net.py  run.py  server.py  types.py  utils.py
evm/go-x1/gossip/: c_block_callbacks.go
go/: go.mod  merkle_test.go
gpuMiner/: LICENSE-argon2-gpu
gpuMiner/data/kernels/: argon2_kernel.cl
gpuMiner/ext/argon2/: CMakeLists.txt
gpuMiner/ext/argon2/arch/x86_64/lib/: argon2-avx512f.c
gpuMiner/ext/argon2/include/: argon2.h
gpuMiner/ext/argon2/lib/: core.h  encoding.c  impl-select.c
gpuMiner/ext/argon2/qmake/argon2/: argon2.pro
gpuMiner/ext/argon2/src/: bench2.c
gpuMiner/include/argon2-cuda/: cudaexception.h  device.h  globalcontext.h  kernelrunner.h  processingunit.h  programcontext.h
gpuMiner/include/argon2-gpu-common/: argon2-common.h  argon2params.h
gpuMiner/include/argon2-opencl/: cl.hpp  device.h  globalcontext.h  kernelrunner.h  opencl.h  processingunit.h  programcontext.h
gpuMiner/include/commandline/: argumenthandlers.h  commandlineoption.h  commandlineparser.h
gpuMiner/lib/argon2-cuda/: cudaexception.cpp  device.cpp  globalcontext.cpp  kernelrunner.cu  nocuda.cpp  processingunit.cpp  programcontext.cpp
gpuMiner/lib/argon2-gpu-common/: argon2params.cpp  blake2b.cpp  blake2b.h
gpuMiner/lib/argon2-opencl/: device.cpp  globalcontext.cpp  kernelloader.cpp  kernelloader.h  kernelrunner.cpp  processingunit.cpp  programcontext.cpp
gpuMiner/src/argon2-gpu-bench/: benchmark.cpp  benchmark.h  cpuexecutive.cpp  cpuexecutive.h  cudaexecutive.cpp  cudaexecutive.h  main.cpp  openclexecutive.cpp  openclexecutive.h  pwgen.h  runtimestatistics.h  shared.h
indexing/: check_rate.py  check_seq.py  count_consensus.py  count_miners.py  getblocks.py  make_superblocks.py  manage_difficulty.py  merkleroot.py  rate_daemon.py
json_api/: __main__.py  config.py  gunicore_config.py
json_api/app/: __init__.py  extensions.py
json_api/app/leaderboard/: __init__.py  routes.py  service.py
json_api/app/main/: __init__.py  routes.py
json_api/app/models/: blockrate.py  blocks.py  cache.py  miners.py
p2pnode/: db.go  mtree.go  node.go  rpc.go  setup.go  sql.go  tools.go  xenp2p.go
readme/: README_ZH.md
system/etc/nginx/: nginx.conf
system/etc/systemd/system/: xenblocks-json-api.service  xenblocks-make-cache.service  xenblocks-make-superblocks.service
tests/: merkle_unittest.py
tools/: format.sh  lint.sh
utils/: account_manager.py  bench.py  block_rate_per_account.py  broadcaster.py  check_superblocks.py  engine.sol  gen_balances.py  get_super_blocks.py  listener.py  listener2.py  listener3.py  make_index.py  make_state.py  make_state3.py  manage_difficulty.py  manage_difficulty2.py  run_node.go  salt_unittest.py  verify_proofs.py  voter.py  watchBlocks.py
utils/go/: utils.go
utils/go_listener/: main.go
vast/: vash.sh
